# pratica_workshops_luciano_galvao

./: README.md  index.html  settings.json
00_estruturando_projetos/: .pre-commit-config.yaml  pyproject.toml
00_estruturando_projetos/app/: main.py  mkdocs.yml
00_estruturando_projetos/app/docs/: index.md
00_estruturando_projetos/app/pipeline/: extract.py  load.py  transform.py
00_estruturando_projetos/app/site/: 404.html  index.html  objects.inv
00_estruturando_projetos/app/site/search/: search_index.json
00_estruturando_projetos/data/output/: output.xlsx
00_estruturando_projetos/tests/: test_pipeline.py
