[tool.poetry]
name = "00-estruturando-projetos"
version = "0.1.0"
description = ""
authors = ["Ismael <ismaelhenriqueeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
pytest = "^8.2.2"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.3"
flake8 = "^7.1.0"
taskipy = "^1.12.2"
mkdocs = "^1.6.0"
mkdocstrings-python = "^1.10.3"
pygments = "^2.18.0"
mkdocs-material = "^9.5.26"
pymdown-extensions = "^10.8.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && flake8"
